--- a/assets/stylesheets/bootstrap/mixins/_panels.scss
+++ b/assets/stylesheets/bootstrap/mixins/_panels.scss
@@ -7,6 +7,7 @@
     color: $heading-text-color;
     background-color: $heading-bg-color;
     border-color: $heading-border;
+    font-weight:  $panel-text-bold;
 
     + .panel-collapse > .panel-body {
       border-top-color: $border;
