--- a/assets/stylesheets/bootstrap/_navbar.scss
+++ b/assets/stylesheets/bootstrap/_navbar.scss
@@ -11,7 +11,7 @@
 .navbar {
   position: relative;
   min-height: $navbar-height; // Ensure a navbar always shows (e.g., without a .navbar-brand in collapsed mode)
-  margin-bottom: $navbar-margin-bottom;
+  margin-bottom: 0;
   border: 1px solid transparent;
 
   // Prevent floats from breaking the navbar
@@ -173,7 +173,8 @@
   }
 
   > img {
-    display: block;
+    display: inline-block;
+    max-height: 100%;
   }
 
   @media (min-width: $grid-float-breakpoint) {
@@ -381,7 +382,7 @@
   }
   .navbar-right {
     float: right !important;
-  margin-right: -$navbar-padding-horizontal;
+    margin-right: 0;
 
     ~ .navbar-right {
       margin-right: 0;
