--- a/assets/stylesheets/bootstrap/_navbar.scss
+++ b/assets/stylesheets/bootstrap/_navbar.scss
@@ -18,7 +18,7 @@
   @include clearfix;
 
   @media (min-width: $grid-float-breakpoint) {
-    border-radius: $navbar-border-radius;
+    border-radius: 0;
   }
 }
 
